# foothold

./: AGENTS.md  Cargo.toml  README.md
.claude/skills/rust-learnings/: SKILL.md
crates/api-gateway/: Cargo.toml
crates/api-gateway/src/: handlers.rs  main.rs  models.rs  state.rs  tests.rs
crates/db-workers/: Cargo.toml
crates/db-workers/src/: lib.rs
crates/market-data/: Cargo.toml
crates/market-data/src/: lib.rs
crates/matching-engine/: Cargo.toml
crates/matching-engine/benches/: order_book.rs
crates/matching-engine/src/: error.rs  lib.rs  order.rs  order_book.rs  tests.rs
crates/risk-engine/: Cargo.toml
crates/risk-engine/src/: lib.rs  tests.rs
crates/sequencer/: Cargo.toml
crates/sequencer/src/: lib.rs  tests.rs
