[workspace]
members = [
    "crates/matching-engine",
    "crates/sequencer",
    "crates/risk-engine",
    "crates/api-gateway",
    "crates/db-workers",
    "crates/market-data",
]
resolver = "2"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
axum        = { version = "0.7" }
rust_decimal = { version = "1", features = ["serde"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4"] }
tracing     = "0.1"
thiserror   = "1"
anyhow      = "1"
