[package]
name    = "matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }

[dev-dependencies]
proptest = "1"
rust_decimal_macros = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "order_book"
harness = false
