[package]
name    = "risk-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }
# redis = "0.24"  # uncomment when you reach the Redis rung

[dev-dependencies]
rust_decimal_macros = "1"
